--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/request": "^2.48.1",
+    "express": "^4.16.4",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
