--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/request": "^2.48.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "request": "^2.88.0"
   },
