--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/giphy-api": "^2.0.2",
     "@types/request": "^2.48.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "giphy-api": "^2.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
