--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/events-api": "^2.2.0",
+    "@slack/web-api": "^5.0.1",
     "@types/dotenv": "^6.1.1",
     "@types/giphy-api": "^2.0.2",
     "@types/request": "^2.48.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "giphy-api": "^2.0.1",
