--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "giphy-api": "^2.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.13.9",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
